QA_Ipreo/src/objects/User_Asset__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>User Assets</relationshipLabel>
        <relationshipName>User_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Active__c</fullName>
        <formula>ISPICKVAL(Asset__r.Status, &quot;Active&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>User Assets</relationshipLabel>
        <relationshipName>User_Assets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Consultant_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultant Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Consultant User Assets</relationshipLabel>
        <relationshipName>User_Assets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Name__c</fullName>
        <label>DM Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Consultant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Consultant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Sponsored_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If a value is placed in the Sponsored User Account field, the field should be true.</description>
        <label>Is Sponsored User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Asset__r.Product2.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <formula>TEXT(Asset__r.Product2.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Asset__r.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Region__c</fullName>
        <formula>Text(Asset__r.Product_Region__c )</formula>
        <label>Product Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Subgroup__c</fullName>
        <formula>TEXT(Asset__r.Product2.Subgroup__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Subgroup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Vertical__c</fullName>
        <formula>TEXT(Asset__r.Product2.Vertical__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Vertical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Denotes what role this contact plays in relation to the asset</description>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POC Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POC and User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sponsored_Users_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsored Users Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sponsored User Assets</relationshipLabel>
        <relationshipName>User_Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Outage_Notification_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Outage Notification Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Country__c</fullName>
        <formula>User__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <description>Contact</description>
        <label>User</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Asset_Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>User Assets</relationshipLabel>
        <relationshipName>User_Assets</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>User Asset</label>
    <listViews>
        <fullName>AllUserAssets</fullName>
        <columns>NAME</columns>
        <columns>Asset__c</columns>
        <columns>Asset_Active__c</columns>
        <columns>Product_Code__c</columns>
        <columns>User__c</columns>
        <columns>User_Country__c</columns>
        <columns>Role__c</columns>
        <columns>System_Outage_Notification_Opt_Out__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All User Assets (Active and Inactive)</label>
    </listViews>
    <listViews>
        <fullName>AllUserAssetsActive</fullName>
        <columns>NAME</columns>
        <columns>Asset__c</columns>
        <columns>Asset_Active__c</columns>
        <columns>Product_Code__c</columns>
        <columns>User__c</columns>
        <columns>User_Country__c</columns>
        <columns>Role__c</columns>
        <columns>System_Outage_Notification_Opt_Out__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Asset_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All User Assets (Active)</label>
    </listViews>
    <listViews>
        <fullName>AllUserAssetsBDACI</fullName>
        <columns>NAME</columns>
        <columns>Asset__c</columns>
        <columns>Asset_Active__c</columns>
        <columns>User__c</columns>
        <columns>User_Country__c</columns>
        <columns>Role__c</columns>
        <columns>System_Outage_Notification_Opt_Out__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Product_Vertical__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Code__c</field>
            <operation>equals</operation>
            <value>BDA - CI</value>
        </filters>
        <label>All User Assets w BDA - CI</label>
    </listViews>
    <listViews>
        <fullName>AllUserAssetsBDADV</fullName>
        <columns>NAME</columns>
        <columns>Asset__c</columns>
        <columns>Asset_Active__c</columns>
        <columns>Product_Code__c</columns>
        <columns>User__c</columns>
        <columns>User_Country__c</columns>
        <columns>Role__c</columns>
        <columns>System_Outage_Notification_Opt_Out__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Name__c</field>
            <operation>equals</operation>
            <value>BD Advance (Derivatives)</value>
        </filters>
        <label>All User Assets w BDA - DV</label>
    </listViews>
    <listViews>
        <fullName>AllUserAssetsBDAEQ</fullName>
        <columns>NAME</columns>
        <columns>Asset__c</columns>
        <columns>Asset_Active__c</columns>
        <columns>Product_Code__c</columns>
        <columns>User__c</columns>
        <columns>User_Country__c</columns>
        <columns>Role__c</columns>
        <columns>System_Outage_Notification_Opt_Out__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Code__c</field>
            <operation>equals</operation>
            <value>BDA - EQ</value>
        </filters>
        <label>All User Assets w BDA - EQ</label>
    </listViews>
    <listViews>
        <fullName>AllUserAssetsBDAFI</fullName>
        <columns>NAME</columns>
        <columns>Asset__c</columns>
        <columns>Asset_Active__c</columns>
        <columns>Product_Code__c</columns>
        <columns>User__c</columns>
        <columns>User_Country__c</columns>
        <columns>Role__c</columns>
        <columns>System_Outage_Notification_Opt_Out__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Code__c</field>
            <operation>equals</operation>
            <value>BDA - FI</value>
        </filters>
        <label>All User Assets w BDA - FI</label>
    </listViews>
    <listViews>
        <fullName>AllUserAssetsBDCEQ</fullName>
        <columns>NAME</columns>
        <columns>Asset__c</columns>
        <columns>Asset_Active__c</columns>
        <columns>Product_Code__c</columns>
        <columns>User__c</columns>
        <columns>User_Country__c</columns>
        <columns>Role__c</columns>
        <columns>System_Outage_Notification_Opt_Out__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Code__c</field>
            <operation>equals</operation>
            <value>BDC - EQ</value>
        </filters>
        <label>All User Assets w BDC - EQ</label>
    </listViews>
    <listViews>
        <fullName>AllUserAssetsBDCFI</fullName>
        <columns>NAME</columns>
        <columns>Asset__c</columns>
        <columns>Asset_Active__c</columns>
        <columns>Product_Code__c</columns>
        <columns>User__c</columns>
        <columns>User_Country__c</columns>
        <columns>Role__c</columns>
        <columns>System_Outage_Notification_Opt_Out__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Code__c</field>
            <operation>equals</operation>
            <value>BDC - FI</value>
        </filters>
        <label>All User Assets w BDC - FI</label>
    </listViews>
    <listViews>
        <fullName>AllUserAssetsBDCG</fullName>
        <columns>NAME</columns>
        <columns>Asset__c</columns>
        <columns>Asset_Active__c</columns>
        <columns>Product_Code__c</columns>
        <columns>User__c</columns>
        <columns>User_Country__c</columns>
        <columns>Role__c</columns>
        <columns>System_Outage_Notification_Opt_Out__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Code__c</field>
            <operation>equals</operation>
            <value>BDCG</value>
        </filters>
        <label>All User Assets w BDCG</label>
    </listViews>
    <listViews>
        <fullName>AllUserAssetsBDCRE</fullName>
        <columns>NAME</columns>
        <columns>Asset__c</columns>
        <columns>Asset_Active__c</columns>
        <columns>Product_Code__c</columns>
        <columns>User__c</columns>
        <columns>User_Country__c</columns>
        <columns>Role__c</columns>
        <columns>System_Outage_Notification_Opt_Out__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Code__c</field>
            <operation>equals</operation>
            <value>BDC - RE</value>
        </filters>
        <label>All User Assets w BDC - RE</label>
    </listViews>
    <listViews>
        <fullName>AllUserAssetsBDIRC</fullName>
        <columns>NAME</columns>
        <columns>Asset__c</columns>
        <columns>Asset_Active__c</columns>
        <columns>Product_Code__c</columns>
        <columns>User__c</columns>
        <columns>User_Country__c</columns>
        <columns>Role__c</columns>
        <columns>System_Outage_Notification_Opt_Out__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Code__c</field>
            <operation>equals</operation>
            <value>BDRIC</value>
        </filters>
        <label>All User Assets w BDIRC</label>
    </listViews>
    <listViews>
        <fullName>AllUserAssetsBDVCI</fullName>
        <columns>NAME</columns>
        <columns>Asset__c</columns>
        <columns>Asset_Active__c</columns>
        <columns>Product_Code__c</columns>
        <columns>User__c</columns>
        <columns>User_Country__c</columns>
        <columns>Role__c</columns>
        <columns>System_Outage_Notification_Opt_Out__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Code__c</field>
            <operation>equals</operation>
            <value>BDV - CI</value>
        </filters>
        <label>All User Assets w BDV - CI</label>
    </listViews>
    <listViews>
        <fullName>AllUserAssetsBDVDV</fullName>
        <columns>NAME</columns>
        <columns>Asset__c</columns>
        <columns>Asset_Active__c</columns>
        <columns>Product_Code__c</columns>
        <columns>User__c</columns>
        <columns>User_Country__c</columns>
        <columns>Role__c</columns>
        <columns>System_Outage_Notification_Opt_Out__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Code__c</field>
            <operation>equals</operation>
            <value>BDV - DV</value>
        </filters>
        <label>All User Assets w BDV - DV</label>
    </listViews>
    <listViews>
        <fullName>AllUserAssetsBDVEQ</fullName>
        <columns>NAME</columns>
        <columns>Asset__c</columns>
        <columns>Asset_Active__c</columns>
        <columns>Product_Code__c</columns>
        <columns>User__c</columns>
        <columns>User_Country__c</columns>
        <columns>Role__c</columns>
        <columns>System_Outage_Notification_Opt_Out__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Code__c</field>
            <operation>equals</operation>
            <value>BDV - EQ</value>
        </filters>
        <label>All User Assets w BDV - EQ</label>
    </listViews>
    <listViews>
        <fullName>AllUserAssetsBDVFI</fullName>
        <columns>NAME</columns>
        <columns>Asset__c</columns>
        <columns>Asset_Active__c</columns>
        <columns>Product_Code__c</columns>
        <columns>User__c</columns>
        <columns>User_Country__c</columns>
        <columns>Role__c</columns>
        <columns>System_Outage_Notification_Opt_Out__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Code__c</field>
            <operation>equals</operation>
            <value>BDV - FI</value>
        </filters>
        <label>All User Assets w BDV - FI</label>
    </listViews>
    <nameField>
        <displayFormat>UA-{000000}</displayFormat>
        <label>User Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_Asset_User_Account</fullName>
        <active>false</active>
        <description>Set inactive because this logic has been covered in trigger.</description>
        <errorConditionFormula>Asset__r.AccountId !=  User__r.AccountId</errorConditionFormula>
        <errorDisplayField>User__c</errorDisplayField>
        <errorMessage>Please select the user from the account of the asset.</errorMessage>
    </validationRules>
</CustomObject>